<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaEstoque"
    android:background="@drawable/background_telas">

    <View
        android:id="@+id/containerdois"
        style="@style/Containerdois"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="239dp"
        android:layout_height="116dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/texto01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/containerdois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textodashboard"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="DASHBOARD"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerdois"
        />

    <ImageView
        android:id="@+id/graficoestoque"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/grafico_estoque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textodashboard"
        />

    <TextView
        android:id="@+id/produto_estoque1"
        style="@style/produtos_estoque"
        android:text="@string/produto_estoque1"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graficoestoque"
        />
    <TextView
        android:id="@+id/produto_estoque2"
        style="@style/produtos_estoque"
        android:text="@string/produto_estoque2"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/produto_estoque1"
        />
    <TextView
        android:id="@+id/produto_estoque3"
        style="@style/produtos_estoque"
        android:text="@string/produto_estoque3"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/produto_estoque2"
        />
    <TextView
        android:id="@+id/produto_estoque4"
        style="@style/produtos_estoque"
        android:text="@string/produto_estoque4"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/produto_estoque3"
        />
    <TextView
        android:id="@+id/produto_estoque5"
        style="@style/produtos_estoque"
        android:text="@string/produto_estoque5"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/produto_estoque4"
        />



</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>