<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edittext"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edittext"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:autofillHints="" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha"

        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"/>

    <TextView
        android:id="@+id/text_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>



</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>