<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro"
    android:background="@drawable/background_telas">

    <View
        android:id="@+id/containerdois"
        style="@style/Containerdois"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="239dp"
        android:layout_height="116dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/texto01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/containerdois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/containeropcoes"
        style="@style/Containerinvisivel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerdois"
        />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_cadastrarusuario"
        style="@style/Button_aplicarfiltro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/bt_cadastrouusuario"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastrarprodutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_cadastrarprodutos"
        style="@style/Button_aplicarfiltro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/bt_cadastarproduto"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/containeropcoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>